--- a/MyWebsite/blog/templates/blog/home.html
+++ b/MyWebsite/blog/templates/blog/home.html
@@ -34,11 +34,13 @@
 
         {%endfor%}
 
+
+        <!--
         {% if is_paginated %}
 
             {% if page_obj.has_previous %}
                 <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-                <!--<a class="btn btn-outline-info mb-4" href="?page={{page_obj.previous_page_number}}">Previous</a>-->
+                <a class="btn btn-outline-info mb-4" href="?page={{page_obj.previous_page_number}}">Previous</a>
             {% endif %}
 
             {% for num in page_obj.paginator.page_range %}
@@ -50,11 +52,12 @@
             {% endfor %}
 
             {% if page_obj.has_next %}
-                <!--<a class="btn btn-outline-info mb-4" href="?page={{page_obj.next_page_number}}">Next</a>-->
+                <a class="btn btn-outline-info mb-4" href="?page={{page_obj.next_page_number}}">Next</a>
                 <a class="btn btn-outline-info mb-4" href="?page={{page_obj.paginator.num_pages}}">Last</a>
             {% endif %}
 
         {% endif %}
+        -->
     {% else %}
         <p><h1>Welcome to the Blogging Website. Please login to view and upload posts.</h1></p>
     {% endif %}
