--- a/MyWebsite/blog/templates/blog/home.html
+++ b/MyWebsite/blog/templates/blog/home.html
@@ -11,6 +11,9 @@
                   <small class="text-muted">{{ post.date_posted|date:"F d, Y"}}</small>
                 </div>
                 <h2><a class="article-title" href="{% url 'post-detail' post.id%}">{{ post.title }}</a></h2>
+                  <a href="{{post.image.url}}" target="_blank">
+                  <img src="{{ post.image.url }}">
+                  </a>
                 <p class="article-content">{{ post.content }}</p>
               </div>
 
