--- a/MyWebsite/blog/templates/blog/post_confirm_delete.html
+++ b/MyWebsite/blog/templates/blog/post_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 {% block content %}
     <div class="content-section">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Delete Post</legend>
