--- a/MyWebsite/blog/templates/blog/post_create.html
+++ b/MyWebsite/blog/templates/blog/post_create.html
@@ -1,16 +1,16 @@
 {% extends 'blog/base.html' %}
-{% load crispy_forms_tags %}
-{% block content %}
-    <div class="content-section">
+{% load crispy_forms_tags%}
+{% block content%}
+ <div class="content-section">
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset class="form-group" enctype="multipart/form-data">
-                <legend class="border-bottom mb-4">Blog Post</legend>
-                {{ form|crispy }}
+                <legend class="border-bottom mb-4">Create a  Post</legend>
+                {{ form.as_p}}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Post</button>
             </div>
         </form>
     </div>
-{% endblock content %}
+{% endblock content%}
