--- a/MyWebsite/blog/templates/blog/post_detail.html
+++ b/MyWebsite/blog/templates/blog/post_detail.html
@@ -14,6 +14,7 @@
                 {% endif %}
             </div>
             <h2 class="article-title">{{ object.title }}</h2>
+              <img src="{{ object.image.url }}">
             <p class="article-content">{{ object.content }}</p>
           </div>
         </article>
